src/test/ui/rust-2018/extern-crate-rename.stderr
error: absolute paths must start with `self`, `super`, `crate`, or an external crate name in the 2018 edition
  --> $DIR/extern-crate-rename.rs:12:5
   |
LL | use my_crate::foo;
   |     ^^^^^^^^^^^^^ help: use `crate`: `crate::my_crate::foo`
   |
note: the lint level is defined here
  --> $DIR/extern-crate-rename.rs:8:9
   |
LL | #![deny(absolute_paths_not_starting_with_crate)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = warning: this is valid in the current edition (Rust 2015) but is not accepted in the Rust 2018 edition!
   = note: for more information, see issue #53130 <https://github.com/rust-lang/rust/issues/53130>

error: aborting due to previous error

